--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
 </nav>
 
 
-    </header>
+   
+    <section id="banner">
+        <div class="banner-content">
+            <h2>Hi I'm</h2>
+            <h1>Farhad Ahammed Turky</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div>
+                <button class="btn">Download CV</button>
+                <button class="btn">contact</button>
+            </div>
+        </div>
+        <div class="banner-image">
+            <img src="images/hardy.png" alt="">
+        </div>
+    </section>
+     </header>
 </body>
 </html>
