--- a/index.html
+++ b/index.html
@@ -98,5 +98,58 @@
             </div>
         </div>
      </section>
+     <section id="resume">
+        <div class="section-heading"><h2>A summary of my resume</h2></div>
+        <div class="resume-container">
+            <div class="education">
+             <h2 class="section-title">My education</h2>
+             <div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr>
+             <div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr>
+             <div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr>
+            </div>
+            <div class="experience">
+                 <h2 class="section-title">My experience</h2>
+                <div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr><div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr><div class="resume-card">
+                <h3 class="card-title">Master in computer engineering</h3> 
+                <p class="card-info">RUET,2024/25</p>
+                <p class="card-text">List skill/technologies here. You can change the icon above 
+to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+             </div>
+             <hr>
+                
+
+            </div>
+        </div>
+     </section>
 </body>
 </html>
