--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="font-open-sans ">
@@ -30,8 +31,8 @@
             <h1>Farhad Ahammed Turky</h1>
             <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
             <div>
-                <button class="btn">Download CV</button>
-                <button class="btn">contact</button>
+                <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn"><i class="fa-solid fa-phone"></i> contact</button>
             </div>
         </div>
         <div class="banner-image">
@@ -150,6 +151,35 @@ to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eg
 
             </div>
         </div>
+        <div class="text-center"><button class="btn"><i class="fa-solid fa-download"></i> Download CV</button></div>
      </section>
+     <footer>
+<section class="footer-container">
+    <div class="social">
+    <h2>Let's connect</h2>
+    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+    <div class="icon">
+        <a href=""><img src="images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+        <a href=""><img src="images/icons/insta.png" alt=""></a>
+    </div>
+    </div>
+    <Form class="form">
+        <h2>let's message me</h2>
+        <div >
+            <input type="text" name="" id="" placeholder="Your name">
+        </div>
+        <div >
+            <input type="text" name="" id="" placeholder="Your Email">
+        </div>
+        <div >
+           <textarea name="" id="" placeholder="message" rows="10"></textarea>
+        </div>
+        <input type="submit" class="btn">
+    </Form>
+</section>
+
+     </footer>
+
 </body>
 </html>
