--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </div>
               <div  class="info-card">
                 <p>Email</p>
-                <h4>mary@gmail.com</h4>
+                <h4>farhadturky@gmail.com</h4>
               </div>
               <div  class="info-card">
                 <p>Date of birth</p>
