--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Hi I'm</h2>
             <h1>Farhad Ahammed Turky</h1>
             <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <div>
+            <div class="btngrp">
                 <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn"><i class="fa-solid fa-phone"></i> contact</button>
             </div>
@@ -68,7 +68,7 @@
         </div>
 
      </section>
-     <section id="skills">
+     <section id="skills" >
         <div class="skills-container">
             <div class="section-heading">
                 <h2>What I Do</h2>
